fix: adjust some spacing
adjusted spaceing of the following
* quote section
* call to action section

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ img {
 
 .section-4 {
   background-color: #e5e7eb;
-  height: 350px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -129,13 +129,15 @@ img {
   display: flex;
   flex-direction: column;
   font-size: 18px;
-  width: 650px;
-  padding: 70px;
+  width: 800px;
+  padding: 50px 0px;
 }
 
 .quote {
+  color: #1f2937;
   font-style: italic;
-  font-weight: 1;
+  font-weight: lighter;
+  font-size: 36px;
 }
 
 .author {
@@ -145,21 +147,24 @@ img {
 }
 
 .section-5 {
-  padding: 150px;
-  height: 250px;
+  padding: 90px;
+  height: 100px;
   background-color: white;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .section-5-content {
   display: flex;
+  justify-content: space-evenly;
   gap: 200px;
   background-color:#3882f6;
   color: white;
   padding: 20px 80px;
   border-radius: 10px;
   font-size: 14px;
+  width: 900px;
 }
 
 .section-5-content-text {
